# client-sdk-generator

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  README.md  biome.json  browser-sdk.schema.json  browser-sdk.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  schema.json
.cargo/: config.toml
.changeset/: all-ears-punch.md  bumpy-toys-decide.md  clear-flowers-unite.md  config.json  crazy-years-kick.md  fresh-cooks-smell.md  hip-cars-go.md  lazy-times-end.md  new-nights-wink.md  ready-baboons-doubt.md  seven-garlics-feel.md  stale-poems-lay.md  thick-groups-bake.md  warm-cities-love.md  wise-ravens-itch.md
.github/: dependabot.yml  zizmor.yml
.github/actions/free-disk-space/: action.yaml
.github/workflows/: beta.yml  main.yml  pull_request.yml  pull_request_js.yml  release.yml
.github/workflows/actions/free-disk-space/: action.yaml
crates/browser_sdk_dart_codegen/: Cargo.toml  README.md
crates/browser_sdk_dart_codegen/src/: lib.rs
crates/browser_sdk_dart_codegen/src/ast/: enum.rs  ident.rs  intersection.rs  mod.rs  object.rs  union.rs
crates/browser_sdk_entity/: Cargo.toml
crates/browser_sdk_schema/: Cargo.toml
crates/browser_sdk_schema/src/: lib.rs
crates/browser_sdk_ts_codegen/: Cargo.toml  README.md
crates/browser_sdk_ts_codegen/src/: comment.rs  entrypoint.rs  import.rs  lib.rs  loader.rs  macros.rs  method.rs  parameter.rs  print.rs
crates/browser_sdk_ts_codegen/templates/: loader.ts
crates/browser_sdk_ts_codegen_macros/: Cargo.toml
crates/browser_sdk_ts_codegen_macros/src/: lib.rs
crates/browser_sdk_utils/: Cargo.toml
crates/browser_sdk_utils/src/: lib.rs
crates/client_sdk_dart_codegen/: Cargo.toml  README.md
crates/client_sdk_dart_codegen/src/: lib.rs
crates/client_sdk_dart_codegen/src/ast/: enum.rs  ident.rs  intersection.rs  mod.rs  object.rs  union.rs
crates/client_sdk_generator/: Cargo.toml
crates/client_sdk_generator/src/: main.rs
crates/client_sdk_kotlin_codegen/: Cargo.toml  README.md
crates/client_sdk_kotlin_codegen/src/: lib.rs
crates/client_sdk_kotlin_codegen/src/ast/: enum.rs  ident.rs  intersection.rs  mod.rs  object.rs  union.rs
crates/client_sdk_schema/: Cargo.toml
crates/client_sdk_schema/src/: lib.rs
crates/client_sdk_swift_codegen/: Cargo.toml
crates/client_sdk_swift_codegen/src/: lib.rs
crates/client_sdk_swift_codegen/src/ast/: enum.rs  ident.rs  intersection.rs  mod.rs  object.rs  union.rs
crates/client_sdk_ts_codegen/: Cargo.toml  README.md
crates/client_sdk_ts_codegen/src/: comment.rs  entrypoint.rs  import.rs  lib.rs  loader.rs  method.rs  parameter.rs  print.rs
crates/client_sdk_ts_codegen/templates/: index.ts
crates/client_sdk_ts_codegen_macros/: Cargo.toml
crates/client_sdk_ts_codegen_macros/src/: lib.rs
crates/client_sdk_utils/: Cargo.toml
crates/client_sdk_utils/src/: lib.rs
crates/generator_cli/: Cargo.toml
crates/generator_cli/src/: main.rs
crates/sdk_generator/: Cargo.toml
crates/sdk_generator/src/: main.rs
scripts/: print-changelog.sh  update-manifests.js  version-check.ts
tests/__fixtures__/output/: requestIdentityVerification.ts
tests/__fixtures__/output/parameters/: channelKey.ts  index.ts  storeId.ts
