[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors    = ["portone-dx <support@portone.io>"]
edition    = "2024"
keywords   = ["PortOne", "payment", "포트원", "결제 연동"]
license    = "AGPL-3.0-or-later"
repository = "https://github.com/portone-io/client-sdk-generator"

[workspace.dependencies]
better_scoped_tls = "1.0.0"
biome_diagnostics = { git = "https://github.com/biomejs/biome.git", tag = "cli/v1.9.4" }
biome_formatter = { git = "https://github.com/biomejs/biome.git", tag = "cli/v1.9.4" }
biome_js_factory = { git = "https://github.com/biomejs/biome.git", tag = "cli/v1.9.4" }
biome_js_formatter = { git = "https://github.com/biomejs/biome.git", tag = "cli/v1.9.4" }
biome_js_parser = { git = "https://github.com/biomejs/biome.git", tag = "cli/v1.9.4" }
biome_js_syntax = { git = "https://github.com/biomejs/biome.git", tag = "cli/v1.9.4" }
biome_rowan = { git = "https://github.com/biomejs/biome.git", tag = "cli/v1.9.4" }
convert_case = "0.6.0"
indoc = "2"
pretty_assertions = "1.4.0"
indexmap = { version = "2", features = ["serde"] }
schemars = { version = "0.9", features = ["preserve_order", "indexmap2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = { version = "0.10" }
client_sdk_schema = { path = "./crates/client_sdk_schema" }
client_sdk_ts_codegen = { path = "./crates/client_sdk_ts_codegen" }
client_sdk_ts_codegen_macros = { path = "./crates/client_sdk_ts_codegen_macros" }
client_sdk_utils = { path = "./crates/client_sdk_utils" }
markdown = { git = "https://github.com/cirnov/markdown-rs" }
mdast_util_to_markdown = { git = "https://github.com/cirnov/markdown-rs" }
