[package]
name = "browser_sdk_schema"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_schema"
path = "bin/generate_schema.rs"

[dependencies]
indexmap = { workspace = true }
pretty_assertions = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
