[package]
name = "client_sdk_ts_codegen"
version = "0.1.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_console = { workspace = true }
biome_diagnostics = { workspace = true }
biome_formatter = { workspace = true }
biome_js_factory = { workspace = true }
biome_js_formatter = { workspace = true }
biome_js_parser = { workspace = true }
biome_js_syntax = { workspace = true }
biome_rowan = { workspace = true }
convert_case = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
client_sdk_schema = { workspace = true }
client_sdk_ts_codegen_macros = { workspace = true }
client_sdk_utils.workspace = true
pretty_assertions = { workspace = true }
pathdiff = "0.2.1"
termcolor.workspace = true
