[package]
name = "generator_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generator-cli"
path = "src/main.rs"

[dependencies]
browser_sdk_schema = { workspace = true }
browser_sdk_ts_codegen = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }
pretty_assertions = { workspace = true }
serde_yaml = { workspace = true }
