[package]
name = "generator_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generator-cli"
path = "src/main.rs"

[dependencies]
better_scoped_tls = { workspace = true }
browser_sdk_dart_codegen = { version = "0.1.0", path = "../browser_sdk_dart_codegen" }
browser_sdk_schema = { workspace = true }
browser_sdk_ts_codegen = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }
pretty_assertions = { workspace = true }
serde_yaml = { workspace = true }
