[package]
name = "sdk_generator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "portone-sdk-generator"
path = "src/main.rs"

[dependencies]
better_scoped_tls = { workspace = true }
browser_sdk_dart_codegen = { version = "0.1.0", path = "../browser_sdk_dart_codegen" }
browser_sdk_schema = { workspace = true }
browser_sdk_ts_codegen = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }
pretty_assertions = { workspace = true }
serde_yaml_ng = { workspace = true }
